--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         scroll-behavior: smooth;
       }
     </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+    "framer-motion": "https://esm.sh/framer-motion@^12.26.2"
+  }
+}
+</script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-brand-cream text-brand-dark antialiased selection:bg-brand-red selection:text-white">
