Update favicon and social metadata
- Use palm tree emoji favicon
- Add OG/Twitter preview tags using official logo
- Improve meta description copy

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Dominican Restaurant - Authentic Caribbean Cuisine in Raleigh, NC</title>
-    <meta name="description" content="Experience authentic Dominican cuisine in Raleigh, NC. Fresh Mofongo, Pernil, Sancocho and more. Order online for pickup or delivery." />
+    <meta name="description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
     <meta name="theme-color" content="#D92323" />
-    <link rel="icon" type="image/png" href="/dominicanrestaurantlogo.png" />
+
+    <!-- Favicon (palm tree emoji) -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%8C%B4%3C/text%3E%3C/svg%3E" />
+
+    <!-- Social preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The Dominican Restaurant | Raleigh, NC" />
+    <meta property="og:description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
+    <meta property="og:image" content="/dominicanrestaurantlogo.png" />
+    <meta property="og:image:alt" content="The Dominican Restaurant Raleigh logo" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="The Dominican Restaurant | Raleigh, NC" />
+    <meta name="twitter:description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
+    <meta name="twitter:image" content="/dominicanrestaurantlogo.png" />
     
     <!-- Preconnect to external origins for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
