Update meta preview title
- Set OG/Twitter title to "Best Dominican Restaurant in Raleigh, North Carolina"
- Update document title to match

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Dominican Restaurant - Authentic Caribbean Cuisine in Raleigh, NC</title>
+    <title>Best Dominican Restaurant in Raleigh, North Carolina | The Dominican Restaurant</title>
     <meta name="description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
     <meta name="theme-color" content="#D92323" />
 
@@ -12,13 +12,13 @@
 
     <!-- Social preview -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Dominican Restaurant | Raleigh, NC" />
+    <meta property="og:title" content="Best Dominican Restaurant in Raleigh, North Carolina" />
     <meta property="og:description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
     <meta property="og:image" content="/dominicanrestaurantlogo.png" />
     <meta property="og:image:alt" content="The Dominican Restaurant Raleigh logo" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="The Dominican Restaurant | Raleigh, NC" />
+    <meta name="twitter:title" content="Best Dominican Restaurant in Raleigh, North Carolina" />
     <meta name="twitter:description" content="Authentic Dominican food in Raleigh, NC—mofongo, mangú, pernil, seafood, and weekly specials. Order online for pickup or delivery." />
     <meta name="twitter:image" content="/dominicanrestaurantlogo.png" />
     
